# Secret-Santa-Assigner

./: Dockerfile  LICENSE  Makefile  README.md  api.py  docker-compose-local.yml  docker-compose.yml  logging.yaml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 6f0b5fd3b44e_add_group_id_to_user_table.py  92cae7ab3f0f_add_owner_id_to_group_table.py  e157efe8bdd6_add_group_table.py  ee5d0feb1a8a_add_user_table.py
scripts/: lint.sh  local_build.sh
src/api/: __init__.py  group_router.py  setup_logging.py  user_router.py  utils_router.py
src/handlers/: group_handler.py  user_handler.py
src/models/: __init__.py  group.py  user.py
src/services/: database.py  group_services.py  mail_services.py  user_services.py
src/values/: group_values.py  user_values.py
