[tool.poetry]
name = "secret-santa-assigner"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
mypy = "^1.7.0"
pyyaml = "^6.0.1"
uvicorn = "^0.24.0.post1"
black = "^23.11.0"
flake8 = "^6.1.0"
isort = "^5.12.0"
pylint = "^3.0.2"
alembic = "^1.12.1"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
